--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        Andrej, Soldo
+                        Andrej Soldo
                     </a>
                 </li>
                 <li>
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="col-md-10 col-md-offset-2 web-title">
-                    <h1>First Last name</h3>
+                    <h1>Andrej Soldo</h3>
                     <span>what I do... subtitle</span>    
                 </div>
             </div>
